--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -127,3 +127,12 @@
     @apply bg-background text-foreground;
   }
 }
+.hide-scrollbar{
+  -ms-overflow-style: none; /*i-e-explorer*/
+  scrollbar-width: none;  /*firefox*/
+
+}
+
+.hide-scrollbar::--webkit-scrollbar{
+  display: none;
+}
